# general-mcp

./: .gitignore  Aptfile  Dockerfile  Procfile  README.md  call_local_mcp.py  heroku.yml  main.py  pyproject.toml
.cursor/: mcp.json
general_mcp/: google_web_search_tool.py  main.py  sentenze.py  server.py
